--- a/environment.yml
+++ b/environment.yml
@@ -1,43 +1,127 @@
 name: tracker
 channels:
+  - anaconda
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - ca-certificates=2023.05.30=h06a4308_0
+  - blas=1.0=openblas
+  - bottleneck=1.3.5=py38h7deecbd_0
+  - brotli-python=1.0.9=py38hfa26641_7
+  - bzip2=1.0.8=h7f98852_4
+  - ca-certificates=2023.01.10=h06a4308_0
+  - cairo=1.16.0=hb05425b_4
+  - certifi=2022.12.7=py38h06a4308_0
+  - cffi=1.15.0=py38h3931269_0
+  - charset-normalizer=3.1.0=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - cython=0.29.32=py38h6a678d5_0
+  - dbus=1.13.18=hb2f20db_0
+  - eigen=3.4.0=h4bd325d_0
+  - expat=2.2.10=h9c3ff4c_0
+  - ffmpeg=4.2.2=h20bf706_0
+  - fontconfig=2.14.1=hef1e5e3_0
+  - freetype=2.10.4=h0708190_1
+  - future=0.18.3=pyhd8ed1ab_0
+  - giflib=5.2.1=h36c2ea0_2
+  - glib=2.69.1=he621ea3_2
+  - gmp=6.2.1=h58526e2_0
+  - gnutls=3.6.13=h85f3911_1
+  - graphite2=1.3.14=h295c915_1
+  - gst-plugins-base=1.14.1=h6a678d5_1
+  - gstreamer=1.14.1=h5eee18b_1
+  - harfbuzz=4.3.0=hf52aaf7_1
+  - hdf5=1.10.6=h3ffc7dd_1
+  - icu=58.2=hf484d3e_1000
+  - idna=3.4=pyhd8ed1ab_0
+  - jpeg=9e=h166bdaf_1
+  - kiwisolver=1.4.4=py38h6a678d5_0
+  - krb5=1.20.1=h143b758_1
+  - lame=3.100=h7f98852_1001
+  - lap=0.4.0=py38h47df419_1005
+  - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
+  - lerc=3.0=h295c915_0
+  - libblas=3.9.0=15_linux64_openblas
+  - libcblas=3.9.0=15_linux64_openblas
+  - libclang=10.0.1=default_hb85057a_2
+  - libdeflate=1.17=h5eee18b_0
+  - libedit=3.1.20221030=h5eee18b_0
+  - libevent=2.1.12=hdbd6064_1
   - libffi=3.4.4=h6a678d5_0
   - libgcc-ng=11.2.0=h1234567_1
+  - libgfortran-ng=13.1.0=h69a702a_0
+  - libgfortran5=13.1.0=h15d22d2_0
   - libgomp=11.2.0=h1234567_1
+  - liblapack=3.9.0=15_linux64_openblas
+  - libllvm10=10.0.1=he513fc3_3
+  - libopenblas=0.3.20=pthreads_h78a6416_0
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.39=h5eee18b_0
+  - libpq=12.15=hdbd6064_1
+  - libprotobuf=3.20.3=he621ea3_0
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libtiff=4.5.0=h6a678d5_2
+  - libvpx=1.7.0=h439df22_0
+  - libwebp=1.2.4=h11a3e52_1
+  - libwebp-base=1.2.4=h5eee18b_1
+  - libxcb=1.15=h7f8727e_0
+  - libxkbcommon=1.0.1=hfa300c1_0
+  - libxml2=2.9.14=h74e7548_0
+  - libxslt=1.1.35=h4e12654_0
+  - lz4-c=1.9.4=h6a678d5_0
+  - matplotlib-base=3.4.3=py38hf4fb855_1
   - ncurses=6.4=h6a678d5_0
+  - nettle=3.6=he412f7d_0
+  - ninja=1.10.2=h06a4308_5
+  - ninja-base=1.10.2=hd09550d_5
+  - nspr=4.35=h6a678d5_0
+  - nss=3.89.1=h6a678d5_0
+  - numexpr=2.8.4=py38hd2a5715_1
+  - numpy=1.22.3=py38h99721a1_2
+  - opencv=4.6.0=py38h417a72b_3
+  - openh264=2.1.1=h4ff587b_0
+  - openjpeg=2.4.0=h3ad879b_0
   - openssl=3.0.9=h7f8727e_0
+  - pandas=1.5.3=py38h417a72b_0
+  - pcre=8.45=h9c3ff4c_0
+  - pillow=9.4.0=py38h6a678d5_0
   - pip=23.1.2=py38h06a4308_0
+  - pixman=0.40.0=h36c2ea0_0
+  - psutil=5.9.0=py38h5eee18b_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyparsing=3.1.0=pyhd8ed1ab_0
+  - pysocks=1.7.1=pyha2e5f31_6
   - python=3.8.16=h955ad1f_4
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.8=2_cp38
+  - pytorch=1.12.1=cpu_py38h9dbd814_1
+  - pytz=2023.3=pyhd8ed1ab_0
+  - pyyaml=6.0=py38h0a891b7_4
+  - qt-main=5.15.2=h327a75a_7
+  - qt-webengine=5.15.9=hd2b0992_4
+  - qtwebkit=5.212=h4eab89a_4
   - readline=8.2=h5eee18b_0
+  - requests=2.31.0=pyhd8ed1ab_0
+  - scipy=1.8.1=py38h1ee437e_0
+  - seaborn=0.12.2=py38h06a4308_0
   - setuptools=67.8.0=py38h06a4308_0
+  - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.41.2=h5eee18b_0
   - tk=8.6.12=h1ccaba5_0
+  - torchvision=0.13.1=cpu_py38h164cc8f_0
+  - tornado=6.1=py38h0a891b7_3
+  - tqdm=4.65.0=pyhd8ed1ab_1
+  - typing-extensions=4.7.1=hd8ed1ab_0
+  - typing_extensions=4.7.1=pyha770c72_0
+  - ultralytics=8.0.125=pyhd8ed1ab_0
+  - urllib3=2.0.3=pyhd8ed1ab_1
   - wheel=0.38.4=py38h06a4308_0
+  - x264=1!157.20191217=h7b6447c_0
   - xz=5.4.2=h5eee18b_0
+  - yaml=0.2.5=h7b6447c_0
   - zlib=1.2.13=h5eee18b_0
-  - pip:
-      - certifi==2023.5.7
-      - contourpy==1.1.0
-      - cycler==0.11.0
-      - fonttools==4.40.0
-      - idna==3.4
-      - kiwisolver==1.4.4
-      - lap==0.4.0
-      - matplotlib==3.7.1
-      - numpy==1.24.3
-      - packaging==23.1
-      - pafy==0.5.5
-      - plot-utils==0.6.14
-      - psutil==5.9.5
-      - pyparsing==3.1.0
-      - pyyaml==6.0
-      - six==1.16.0
-      - urllib3==2.0.3
-      - utils==1.0.1
-prefix: /home/graphicslesstower/anaconda3/envs/yolo
+  - zstd=1.5.5=hc292b87_0
+prefix: /home/graphicslesstower/anaconda3/envs/tracker
